Moss Changelog

!	Security fix and important improve;
*	Common bug fix and improve;
+	Feature add;
-	Feature remove;


2.1.1
=====
2016-MM-DD
* Add Server-ID HTTP header in Nginx configuration. The Server-ID is
  server hostname;
* Fix Nginx Anti-ClickJacking configure does not work in PHP handler;
* Update Nginx FastCGI fastcgi_param configuration;
* Add PHP soap and ldap modules;


2.1.0
=====
2016-08-27
! Update to support Nginx 1.10.x;
! Update to support PHP 7.0.x;
! MySQL and Redis password generates by random and save to /root/.my.cnf
  and /root/.moss;
+ Add YUM Priorities plugin. CentOS-Base set to 1, CentOS-Plus set to 2
  and EPEL set to 3;
+ Add dmidecode curl c-ares RPMs;
* Set default LANG and LC_ALL to en_US.UTF-8;
* Fix Vim statusline;
* vimrc optimized;
* Arrange RPMs in install_rpm.sh;
* Update SaltStack installation. Use SaltStack official YUM repository;
* Update Xtrabackup script. No database lock during backup and record
  backup log;
* Enable MySQL GTID by default;
* Redis THP setting support;
* Optimize sysctl.conf;
* Update Nginx SSL configuration;
* Update Nginx PHP and MySQL logrotate policy;
* Use NTP service instead of ntpdate cron job;
* Use system default curl and c-ares to compile PHP;
* Fix redis init script stop fail when requirepass used;
* MySQL bind to 127.0.0.1 by default;
* Redis bind to 127.0.0.1 by default;
* redis.conf and redis init script set to 0600 and 0700;
- Remove htop RPM;


2.0.0
=====
2015-09-19
! Support uninstall Moss. Select 'u' in installaion interface;
! Use CentOS original libs.(libxml2,zlib,openssl,pcre,libmcrypt etc.);
+ Add Name Service Caching Daemon (NSCD);
+ Support log user shell commands in syslog (/var/log/secure);
+ Prompt user reboot system if needed;
+ Set GRUB to visable boot mode;
+ Add /etc/resolv.conf optimize;
+ Add package_info.sh tool;
* Optimize L.N.M.P and library packages install policy;
* Speed up service software packages installation;
* Optimize system service on/off policy;