@@ -59,11 +59,6 @@ readonly GROUP_SA=''
 # The user ID in sa group start from. No need to change.
 USER_SA_FROM=3001
 
-# Change CentOS YUM
-# Default is Beijing Institute of Technology, you can edit ../conf/yum/
-# CentOS-Base.repo and epel.repo to fit your fastest repo.
-readonly CHANGE_YUM=1
-
 # Install SaltStack minion
 # 0: Do not install SaltStack Minion RPM
 # 1: Install SaltStack Minion RPM
